@@ -4,6 +4,7 @@ const char* ecasound_parameter_help_rep =
 "USAGE: (qt)ecasound [options] \n"
 "     -c                       set interactive mode \n"
 "     -d:debug_level           show debug info \n"
+"     -D                       print all debug info to stderr\n"
 "     -q                       quiet mode, no output \n"
 "     --help                   show this help\n"
 "     --version                print version info\n"
